# 524_easysklearn

./: CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: easysklearn.rst  modules.rst
easysklearn/: baseline_fun.py  easysklearn.py  eda.py  feature_select.py  feature_selection.py  miss_data.py
tests/: test_baseline_fun.py  test_easysklearn.py  test_eda.py  test_feature_select.py  test_miss_data.py
