[tool.poetry]
name = "easysklearn"
version = "0.1.0"
description = ""
authors = ["yzr96 <eric.yu@usask.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
seaborn = "^0.11.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
